# orbbec_saveimage

./: README.md
.cache/clangd/index/: Context.hpp.1C8D71B93CCDE424.idx  Device.hpp.66318ED1163196AE.idx  DeviceInfo.h.0AA15AF0D343C03A.idx  Error.hpp.A9733AB31A3B3E9F.idx  Extrinsics.h.C49099CB173DE80D.idx  Filter.hpp.FC9316DDDA6649C1.idx  Frame.hpp.D0683D7227E8F761.idx  GetBool.h.A1BD7225BDC695BE.idx  GetBoolRequest.h.33F0BB9C0622CC09.idx  GetBoolResponse.h.080014B6599F6628.idx  GetCameraInfo.h.02A356D32F1DDC61.idx  GetCameraInfoRequest.h.C5C99E4A6717BE10.idx  GetCameraInfoResponse.h.D2AC845C65C4AD1C.idx  GetCameraParams.h.568D18BAB8053D93.idx  GetCameraParamsRequest.h.523602C96223907B.idx  GetCameraParamsResponse.h.FE94E48CC59ED24B.idx  GetDeviceInfo.h.6A857F43C009BC08.idx  GetDeviceInfoRequest.h.E2D9FAC441866375.idx  GetDeviceInfoResponse.h.904036E875BC195E.idx  GetInt32.h.13DAC7025F9ECF83.idx  GetInt32Request.h.281BC3B5C02BB22B.idx  GetInt32Response.h.FF742BE46703FDE6.idx  GetString.h.0E0770AAE89F6B1D.idx  GetStringRequest.h.19DB16AA6B3280D3.idx  GetStringResponse.h.E6BB748103405CFC.idx  IMUInfo.h.9FEEE7B61207E6BC.idx  Metadata.h.C87F7257FB98D93C.idx  ObSensor.hpp.00F4FB44508CCEF0.idx  ObTypes.h.2E9030C7C795A18E.idx  Pipeline.hpp.A12526A6AB0BAFA1.idx  Property.h.2CCF05C1C4154527.idx  RecordPlayback.hpp.11C3EEF10364EF07.idx  Sensor.hpp.B09873DBBCFBDB4B.idx  SetBool.h.BBD062C7149920D2.idx  SetBoolRequest.h.7A8AE6B134D9E99F.idx  SetBoolResponse.h.62D7F06C53F0CC5F.idx  SetInt32.h.1E7B8FB27EC1AE63.idx  SetInt32Request.h.3DCE39A03590BD66.idx  SetInt32Response.h.7704AA0A647B8F3A.idx  SetString.h.5C9B5E9183490AD8.idx  (+44 more)
Log/: OrbbecSDK.log.txt
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/rgb2cloud/: area.h  pcArea.h  point.h  rgb2cloud.h  rgb2cloudRequest.h  rgb2cloudResponse.h
devel/lib/orbbec_camera/: list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node
devel/lib/orbbec_saveimage/: orbbec_save
devel/lib/pc_image_save/: pc_image_save
devel/lib/pkgconfig/: cam_tool_bringup.pc  orbbec_camera.pc  orbbec_saveimage.pc  pc_image_save.pc  rgb2cloud.pc
devel/lib/rgb2cloud/: rgb2cloud
devel/share/cam_tool_bringup/cmake/: cam_tool_bringupConfig.cmake
devel/share/orbbec_camera/cmake/: orbbec_camera-msg-extras.cmake  orbbec_camera-msg-paths.cmake  orbbec_cameraConfig-version.cmake  orbbec_cameraConfig.cmake
devel/share/orbbec_saveimage/cmake/: orbbec_saveimage-msg-paths.cmake  orbbec_saveimageConfig.cmake
devel/share/pc_image_save/cmake/: pc_image_save-msg-extras.cmake  pc_image_saveConfig.cmake
devel/share/rgb2cloud/cmake/: rgb2cloud-msg-extras.cmake  rgb2cloud-msg-paths.cmake  rgb2cloudConfig.cmake
devel/share/roseus/ros/orbbec_camera/: manifest.l
devel/share/roseus/ros/orbbec_saveimage/: manifest.l
src/cam_tool/cam_tool_bringup/: CMakeLists.txt  package.xml
src/cam_tool/cam_tool_bringup/launch/: cam_tool_bringup.launch
src/cam_tool/pc_image_save/: CMakeLists.txt  package.xml
src/cam_tool/pc_image_save/src/: main.cpp
src/cam_tool/rgb2cloud/: CMakeLists.txt  package.xml
src/cam_tool/rgb2cloud/launch/: rgb2cloud.launch
src/cam_tool/rgb2cloud/msg/: area.msg  pcArea.msg
src/cam_tool/rgb2cloud/src/: main.cpp
src/cam_tool/rgb2cloud/srv/: rgb2cloud.srv
src/orbbec_saveimage/: CMakeLists.txt
src/orbbec_saveimage/include/: form.h  takephoto_service.h
src/orbbec_saveimage/launch/: orbbec_saveimage.launch
src/orbbec_saveimage/src/: form.cpp  form.ui  main.cpp  takephoto_service.cpp
(+31 files in other folders)
